--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  background: url('./ping-semi-transparent.png') no-repeat center center / contain fixed;
   margin: 0;
+  font-size: 25px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
